--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-form-hook": "^0.0.1",
     "react-router-dom": "^7.1.3",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.1"
   },
