--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-form-hook": "^0.0.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^11.0.3",
